[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rcsd-topo-poc"
version = "0.0.0"
requires-python = ">=3.9"
dependencies = [
  "pyproj>=3.6,<3.7",
  "pyshp>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
markers = [
  "smoke: minimal end-to-end checks that only write under outputs/_work",
]
