[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rcsd-topo-poc"
version = "0.0.0"
requires-python = ">=3.10,<3.11"
dependencies = [
  "fiona>=1.9,<2",
  "ijson>=3.4,<4",
  "numpy>=1.26,<3",
  "Pillow>=10,<12",
  "pyproj>=3.6,<3.7",
  "pyshp>=3.0",
  "shapely>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "geopandas>=1.1,<2",
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
markers = [
  "smoke: minimal end-to-end checks that only write under outputs/_work",
]
